feat: implemented chest gui